--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -38,6 +38,7 @@ templ Base() {
 					@Loading()
 				</div>
 				<div id="toast-container" class="toast toast-start z-50"></div>
+				<div id="alert-container" class=""></div>
 			</main>
 		</body>
 	</html>
