--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -28,12 +28,55 @@ templ Base() {
 			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
 			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
 			<script src="/static/toast/toast.js" defer></script>
+			<style>
+       @keyframes fade-in {
+         from { opacity: 0; }
+       }
+    
+       @keyframes fade-out {
+         to { opacity: 0; }
+       }
+    
+       @keyframes slide-from-right {
+         from { transform: translateX(90px); }
+       }
+    
+       @keyframes slide-to-left {
+         to { transform: translateX(-90px); }
+       }
+    
+       /* define animations for the old and new content */
+       ::view-transition-old(slide-it) {
+         animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+         600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+       }
+       ::view-transition-new(slide-it) {
+         animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+         600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+       }
+    
+       /* tie the view transition to a given CSS class */
+       .sample-transition {
+           view-transition-name: slide-it;
+       }
+
+       ::view-transition-old(fade-in) {
+         animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out;
+       }
+       ::view-transition-new(fade-in) {
+         animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in;
+       }
+       .fadein-transition {
+           view-transition-name: fade-in;
+        }
+        
+    </style>
 		</head>
 		<body>
 			// tailwind flowbite 
 			<main class="base max-w-screen gap-2 px-6 pt-5">
 				<div id="navbar-container" hx-get="/navbar" hx-trigger="load" hx-swap="outerHTML"></div>
-				<div hx-boost="true" id="content-container" hx-history-elt="true">
+				<div hx-boost="true" id="content-container" class="sample-transition" hx-history-elt="true">
 					{ children... }
 					@Loading()
 				</div>
