--- a/cmd/web/exchange/landing_page.templ
+++ b/cmd/web/exchange/landing_page.templ
@@ -16,7 +16,7 @@ templ Landing() {
 			hx-target="#htmx_modal"
 			hx-trigerr="click"
 			onclick="exchange_modal.showModal()"
-			class="btn btn-primary"
+			class="btn btn-success --depth"
 		>
 			Create Exchange Request
 		</div>
