--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -7,41 +7,32 @@ import (
 )
 
 templ BooksSearch() {
-	<div class="max-w-screen-lg mx-auto p-4 items-center">
-		<div class="flex flex-col items-center mx-10 pb-4">
-			<div class="flex w-full justify-center mb-4">
+	<div class="max-w-screen-lg mx-auto items-center">
+		<div class="flex flex-col items-center mx-10">
+			<!-- tabs  -->
+			<div class="w-full justify-center mb-4">
+				<!-- search form  -->
 				<form
 					hx-post="/books"
 					method="POST"
 					hx-target="#books-container"
 					hx-indicator="#loading-spinner"
-					class="flex justify-center w-full"
 				>
-					<label class="input flex items-center">
-						<input
-							type="search"
-							id="book-title"
-							name="book-title"
-							class="grow"
-							placeholder="Search for new reads"
-						/>
-						<button
-							type="submit"
-						>
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								viewBox="0 0 16 16"
-								fill="currentColor"
-								class="h-4 w-4 opacity-70"
-							>
-								<path
-									fill-rule="evenodd"
-									d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-									clip-rule="evenodd"
-								></path>
-							</svg>
-						</button>
-					</label>
+					<div class="flex w-full justify-center">
+						<div role="tablist" class="tabs tabs-border tabs-lg my-4">
+							<input value="title" type="radio" name="type" role="tab" class="tab" aria-label="Title" checked="checked"/>
+							<input value="author" type="radio" name="type" role="tab" class="tab" aria-label="Authors"/>
+							<input value="subject" type="radio" name="type" role="tab" class="tab" aria-label="Subject"/>
+							<input value="isbn" type="radio" name="type" role="tab" class="tab" aria-label="ISBN"/>
+						</div>
+					</div>
+					<input
+						type="text"
+						id="book-title"
+						name="query"
+						class="w-full input input-lg"
+						placeholder="Search for new reads"
+					/>
 				</form>
 			</div>
 			<div class="flex justify-center w-[80rem] mb-10">
@@ -59,7 +50,7 @@ templ BooksPost(books []*models.Book, userBooks []*models.UserBook, page int, qu
 			<td class="w-1/12 px-3 py-2">
 				<div class="flex items-center gap-3">
 					<div class="avatar">
-						<div class="mask mask-squircle h-12 w-12">
+						<div class="mask mask-squircle h-30 w-23">
 							<img src={ book.ImageLink } alt="img"/>
 						</div>
 					</div>
