--- a/cmd/web/exchange/landing_page.templ
+++ b/cmd/web/exchange/landing_page.templ
@@ -1,32 +1,37 @@
 package web_exchange
 
 templ Landing() {
-	<div class="flex flex-col items-center mx-10 md:mx-20 pb-4">
-		<dialog id="exchange_modal" class="modal modal-lg">
-			<div class="modal-box w-11/12 max-w-5xl h-auto overflow-visible" id="htmx_modal"></div>
-		</dialog>
-		<div>
-			<h1 class="text-3xl font-bold">My Requests</h1>
+	<dialog id="exchange_modal" class="modal modal-lg">
+		<div class="modal-box w-11/12 max-w-5xl h-auto overflow-visible" id="htmx_modal"></div>
+	</dialog>
+	<div class="flex flex-col justify-center max-w-screen-lg mx-auto p-4 items-center">
+		<div class="flex flex-col items-center mx-10 md:mx-20">
+			<div class="breadcrumbs text-lg">
+				<ul>
+					<li>My requests</li>
+				</ul>
+			</div>
 		</div>
 	</div>
-	<div class="flex items-end justify-end mx-10 md:mx-20">
+	<div class="mx-auto max-w-screen-lg">
 		<div
 			hx-get="/exchange/modal/new"
 			hx-swap="innerHTML"
 			hx-target="#htmx_modal"
 			hx-trigerr="click"
 			onclick="exchange_modal.showModal()"
-			class="btn btn-success --depth"
+			class="btn btn-success btn-outline --depth"
 		>
 			Create Exchange Request
 		</div>
-	</div>
-	<div class="flex flex-col items-center mx-10 md:mx-20 pb-4">
-		<div
-			id="exchanges-container"
-			hx-get="/exchange/list"
-			hx-trigger="load"
-			hx-swap="innerHTML"
-		></div>
+		<div class="flex flex-col justify-center items-center">
+			<div
+				id="exchanges-container"
+				hx-get="/exchange/list"
+				hx-trigger="load"
+				hx-swap="innerHTML"
+				class="w-full"
+			></div>
+		</div>
 	</div>
 }
