--- a/cmd/web/exchange/list.templ
+++ b/cmd/web/exchange/list.templ
@@ -6,7 +6,7 @@ import (
 )
 
 templ List(exchanges []*models.ExchangeRequest) {
-	<div class="mt-4 w-full">
+	<div class="w-full">
 		<table class="bg-base-100 table table-lg">
 			<!-- head -->
 			<thead>
