--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -7,46 +7,45 @@ import (
 )
 
 templ List(books []*models.UserBook) {
-	<div class="flex flex-col items-center mx-10 md:mx-20">
-		<div class="breadcrumbs text-lg">
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col">
+		<div class="breadcrumbs text-lg mb-2">
 			<ul>
 				<li>My Books</li>
 			</ul>
 		</div>
-		<label class="input input-bordered flex items-center gap-2 mb-4">
-			<input
-				name="query"
-				hx-get="/user-books/search"
-				hx-trigger="keyup changed delay:300ms"
-				hx-target="#books-container"
-				type="text"
-				class="grow"
-				placeholder="Search"
-			/>
-			<svg
-				xmlns="http://www.w3.org/2000/svg"
-				viewBox="0 0 16 16"
-				fill="currentColor"
-				class="h-4 w-4 opacity-70"
-			>
-				<path
-					fill-rule="evenodd"
-					d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
-					clip-rule="evenodd"
-				></path>
-			</svg>
-		</label>
-	</div>
-	<div class="flex-grow justify-center relative mb-10 overflow-auto ">
-		<div class="flex w-full relative justify-center">
-			<dialog id="my_modal_1" class="modal">
-				<div class="modal-box" id="htmx_modal"></div>
-			</dialog>
-			<!-- divider -->
-			<!-- @Bookshelfs() -->
-			<!-- <div class="divider divider-horizontal"></div> -->
-			<!-- table -->
-			@UserBooksTable(books)
+		<div class="w-full flex flex-row justify-between">
+			<div
+				class="btn btn-outline btn-neutral"
+				hx-get="/books"
+				hx-swap="innerHTML"
+				hx-target="#content-container"
+				hx-push-url="true"
+			>+ Add Book</div>
+			<label class="w-1/2 input input-bordered flex items-center gap-2">
+				<input
+					name="query"
+					hx-get="/user-books/search"
+					hx-trigger="keyup changed delay:300ms"
+					hx-target="#books-container"
+					type="text"
+					class="grow"
+					placeholder="Search My Books"
+				/>
+				<svg class="h-[1em] opacity-50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g stroke-linejoin="round" stroke-linecap="round" stroke-width="2.5" fill="none" stroke="currentColor"><circle cx="11" cy="11" r="8"></circle><path d="m21 21-4.3-4.3"></path></g></svg>
+			</label>
+		</div>
+		<div class="divider"></div>
+		<div class="w-full justify-center mb-10 overflow-auto ">
+			<div class="flex w-full relative justify-center">
+				<dialog id="my_modal_1" class="modal">
+					<div class="modal-box" id="htmx_modal"></div>
+				</dialog>
+				<!-- divider -->
+				<!-- @Bookshelfs() -->
+				<!-- <div class="divider divider-horizontal"></div> -->
+				<!-- table -->
+				@UserBooksTable(books)
+			</div>
 		</div>
 	</div>
 	<div id="progress-statistics"></div>
@@ -112,7 +111,7 @@ templ BooksTableRows(books []*models.UserBook) {
 							hx-swap="innerHTML"
 							hx-trigger="click"
 							onclick="my_modal_1.showModal()"
-							class="btn"
+							class="btn btn-neutral btn-outline"
 						>Start tracking</button>
 					}
 				</div>
@@ -124,8 +123,8 @@ templ BooksTableRows(books []*models.UserBook) {
 						hx-confirm="Are you sure?"
 						hx-target="closest tr"
 						hx-swap="outerHTML 0.5s"
-						class="btn btn-sm w-full btn-outline btn-error"
-					>Remove</button>
+						class="btn btn-outline btn-error"
+					>x</button>
 				</div>
 			</td>
 		</tr>
