--- a/cmd/web/exchange/details.templ
+++ b/cmd/web/exchange/details.templ
@@ -5,50 +5,60 @@ import "time"
 import "fmt"
 
 templ ExchangeDetails(exchangeRequest *models.ExchangeRequest) {
-	<div class="flex justify-center items-center">
-		<div class="max-w-screen-lg mx-60">
-			<div class="justify-center w-full mb-6">
-				<div class="flex w-full relative justify-center">
-					<div class="breadcrumbs text-lg">
-						<ul>
-							<li><a href="/exchange">My Requests</a></li>
-							<li>{ exchangeRequest.DesiredBook.Title }</li>
-						</ul>
-					</div>
-				</div>
-				<div class="justify-center w-full mb-10">
-					@DetailsDiv(exchangeRequest)
-				</div>
-				<div class="flex flex-col items-center mx-10 md:mx-40 pb-4">
-					<div class="breadcrumbs text-lg">
-						<ul>
-							<li>Matches Found</li>
-						</ul>
-					</div>
-				</div>
-				<!-- filters -->
-				<div class="flex flex-row justify-between items-end">
-					<div class="flex w-full flex-row justify-start">
-						<input type="range" min="0" max="7000" value="1000" class="range range-sm range-neutral mr-4 mb-4"/>
-						<span>2000 m</span>
-					</div>
-					<div class="flex w-full justify-end ">
-						<div class="flex filter w-full mb-4 justify-end">
-							<input class="btn btn-sm btn-outline filter-reset" type="radio" name="status" aria-label="All"/>
-							<input class="btn btn-sm btn-outline" type="radio" name="status" aria-label="accepted"/>
-							<input class="btn btn-sm btn-outline" type="radio" name="status" aria-label="declined"/>
-							<input class="btn btn-sm btn-outline" type="radio" name="status" aria-label="pending"/>
-						</div>
-					</div>
-				</div>
-				<div
-					id="request-matches"
-					hx-get={ fmt.Sprintf("/exchange/%d/matches", exchangeRequest.ID) }
-					hx-trigger="load"
-					hx-swap="innerHTML"
-				></div>
+	<div class="max-w-screen-lg mx-auto p-4 items-center">
+		<div class="flex flex-col items-center mx-10 md:mx-20">
+			<div class="breadcrumbs text-lg">
+				<ul>
+					<li><a href="/exchange">My Requests</a></li>
+					<li>{ exchangeRequest.DesiredBook.Title }</li>
+				</ul>
 			</div>
 		</div>
+		<div class="justify-center w-full mb-10">
+			@DetailsDiv(exchangeRequest)
+		</div>
+		<div class="flex flex-col items-center mx-10 md:mx-40 pb-4">
+			<div class="breadcrumbs text-lg">
+				<ul>
+					<li>Matches Found</li>
+				</ul>
+			</div>
+		</div>
+		<!-- filters -->
+		<div class="flex w-full flex-row justify-start items-center mb-4">
+			<input
+				type="checkbox"
+				class="checkbox checkbox-neutral mr-4"
+				_="on change set #distance-range's disabled to not my.checked 
+                        if not me.checked transition #distance-value's opacity to 0.5 over 0.3 seconds
+                            else transition #distance-value's opacity to 1 over 0.3 seconds"
+			/>
+			<input
+				id="distance-range"
+				name="distance"
+				type="range"
+				min="0"
+				disabled="true"
+				max="300"
+				value="12"
+				class="w-full range range-sm range-neutral mr-4 transition-opacity duration-300 opacity-100"
+				hx-get={ fmt.Sprintf("/exchange/%d/matches/filter", exchangeRequest.ID) }
+				hx-trigger="input changed delay:100ms"
+				hx-target="#request-matches"
+				hx-swap="innerHTML settle:0.3s"
+				hx-include="#distance-range"
+				_="on input set #distance-value's innerText to my.value + ' km'"
+				_="on htmx:beforeSwap
+        if event.detail.target.innerHTML is event.detail.content then cancel the event"
+			/>
+			<span id="distance-value" class="w-16 opacity-50">12 km</span>
+		</div>
+		<div
+			id="request-matches"
+			hx-get={ fmt.Sprintf("/exchange/%d/matches", exchangeRequest.ID) }
+			hx-trigger="load"
+			hx-swap="innerHTML"
+		></div>
 	</div>
 }
 
