--- a/cmd/web/exchange/landing_page.templ
+++ b/cmd/web/exchange/landing_page.templ
@@ -4,34 +4,33 @@ templ Landing() {
 	<dialog id="exchange_modal" class="modal modal-lg">
 		<div class="modal-box w-11/12 max-w-5xl h-auto overflow-visible" id="htmx_modal"></div>
 	</dialog>
-	<div class="flex flex-col justify-center max-w-screen-lg mx-auto p-4 items-center">
-		<div class="flex flex-col items-center mx-10 md:mx-20">
-			<div class="breadcrumbs text-lg">
-				<ul>
-					<li>My requests</li>
-				</ul>
-			</div>
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col">
+		<div class="breadcrumbs text-lg mb-2">
+			<ul>
+				<li>My Requests</li>
+			</ul>
 		</div>
-	</div>
-	<div class="mx-auto max-w-screen-lg">
-		<div
-			hx-get="/exchange/modal/new"
-			hx-swap="innerHTML"
-			hx-target="#htmx_modal"
-			hx-trigerr="click"
-			onclick="exchange_modal.showModal()"
-			class="btn btn-success btn-outline --depth"
-		>
-			Create Exchange Request
-		</div>
-		<div class="flex flex-col justify-center items-center">
+		<div class="justify-center w-full ">
 			<div
-				id="exchanges-container"
-				hx-get="/exchange/list"
-				hx-trigger="load"
+				hx-get="/exchange/modal/new"
 				hx-swap="innerHTML"
-				class="w-full"
-			></div>
+				hx-target="#htmx_modal"
+				hx-trigerr="click"
+				onclick="exchange_modal.showModal()"
+				class="btn btn-neutral btn-outline"
+			>
+				+ Create
+			</div>
+			<div class="divider"></div>
+			<div class="flex flex-col justify-center items-center">
+				<div
+					id="exchanges-container"
+					hx-get="/exchange/list"
+					hx-trigger="load"
+					hx-swap="innerHTML"
+					class="w-full"
+				></div>
+			</div>
 		</div>
 	</div>
 }
