--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -3,21 +3,45 @@ package web
 import "github.com/FilipBudzynski/book_it/internal/models"
 
 templ HomePage(user *models.User) {
-	<div class="hero" hx-target="#content-container" hx-swap="innerHTML">
-		<div class="hero-content text-center">
-			<div class="max-w-lg">
-				<h1 class="mb-4 text-5xl font-extrabold leading-none">
-					Welcome to
-					<span class="text-green-700">Book It</span>
-				</h1>
-				<p class="mb-3 text-lg font-normal">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
-				<a href="/books" class="inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-white bg-green-700 rounded-lg hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900">
-					Search Books
-					<svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-					</svg>
-				</a>
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col mb-10" hx-target="#content-container" hx-swap="innerHTML">
+		<article class="prose mt-4">
+			<h1>Welcome to <span class="text-green-700">Book it</span></h1>
+			<!-- Feature 1 -->
+			<h3>Track Your <span class="text-green-700">Reading Progress</span></h3>
+			<p class="text-gray-600 mb-2">Pick your start and end dates, and we'll calculate how many pages you need to read daily. We'll even adjust your targets if you miss a day or read more than planned!</p>
+			<div
+				href="/user-books"
+				class="btn btn-neutral"
+			>
+				Track Progress
+				<svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+					<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+				</svg>
 			</div>
-		</div>
+			<!-- Feature 2 -->
+			<h3><span class="text-green-700">Exchange</span> Books</h3>
+			<p class="text-gray-600 mb-2">Don’t want to pay for new books? Find someone nearby to exchange books with! Filter by distance and start sharing.</p>
+			<div
+				href="/exchange"
+				class="btn btn-neutral"
+			>
+				Find Exchanges
+				<svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+					<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+				</svg>
+			</div>
+			<!-- Feature 3 -->
+			<h3>Get Personalized <span class="text-green-700">Recommendations</span></h3>
+			<p class="text-gray-600 mb-2">Not sure what to read next? Check your profile for personalized recommendations based on your interests!</p>
+			<div
+				href="/users/profile"
+				class="btn btn-neutral"
+			>
+				Recommendations
+				<svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+					<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"></path>
+				</svg>
+			</div>
+		</article>
 	</div>
 }
