--- a/cmd/web/progress/card_progress.templ
+++ b/cmd/web/progress/card_progress.templ
@@ -8,20 +8,22 @@ templ CardProgress(progress *models.ReadingProgress, userBook *models.UserBook) 
 		<div class="modal-box" id="htmx_modal"></div>
 	</dialog>
 	<div id="modal-content"></div>
-	<div class="flex flex-col justify-center max-w-screen-lg mx-auto p-4 items-center">
-		<div class="flex flex-col items-center mx-10 md:mx-20">
-			<div class="breadcrumbs text-lg">
-				<ul>
-					<li>Journal</li>
-				</ul>
-			</div>
+	<div class="max-w-screen-lg mx-auto items-start flex flex-col">
+		<div class="breadcrumbs text-lg">
+			<ul>
+				<li>My Books</li>
+				<li>{ progress.BookTitle }</li>
+				<li>Journal</li>
+			</ul>
 		</div>
 	</div>
 	<div class="mx-auto max-w-3xl">
 		@ProgressDetailsOverview(progress, userBook, nil)
 		<div class="my-4 mb-6 divider">Logs</div>
 		for _, log := range progress.DailyProgress {
-			@LogDiv(log)
+			<div>
+				@LogDiv(log)
+			</div>
 		}
 	</div>
 }
@@ -29,7 +31,7 @@ templ CardProgress(progress *models.ReadingProgress, userBook *models.UserBook) 
 templ ProgressDetailsOverview(progress *models.ReadingProgress, userBook *models.UserBook, log *models.DailyProgressLog) {
 	<div
 		id="progress-details"
-		class="w-full bg-base-100 rounded-3xl shadow-lg my-10 p-4 flex flex-col gap-4"
+		class="htmx-swapping:opacity-20 transition-opacity duration-300 w-full bg-base-100 rounded-3xl shadow-lg my-10 p-4 flex flex-col gap-4 "
 	>
 		<div class="flex flex-row gap-4 justify-between items-start">
 			<div class="flex flex-col gap-4 w-full">
@@ -45,7 +47,7 @@ templ ProgressDetailsOverview(progress *models.ReadingProgress, userBook *models
 						<div
 							class="radial-progress"
 							{ templ.Attributes{"style": fmt.Sprintf("--value:%s; --size:7rem;", readingProgress) }... }
-							aria-valuenow="80"
+							aria-valuenow={ readingProgress }
 							role="progressbar"
 						>
 							{ readingProgress }% 
@@ -74,7 +76,11 @@ templ ProgressDetailsOverview(progress *models.ReadingProgress, userBook *models
 		</div>
 	</div>
 	if log != nil {
-		<div id={ fmt.Sprintf("log-container-%d", log.ID) } hx-swap-oob="true">
+		<div
+			id={ fmt.Sprintf("log-container-%d", log.ID) }
+			hx-swap-oob="true"
+			hx-swap="outerHTML"
+		>
 			@LogDiv(*log)
 		</div>
 	}
@@ -82,7 +88,7 @@ templ ProgressDetailsOverview(progress *models.ReadingProgress, userBook *models
 
 templ LogDiv(log models.DailyProgressLog) {
 	<div
-		class="collapse collapse-arrow w-full bg-base-100 rounded-xl shadow-lg my-4 p-1"
+		class="htmx-swapping:opacity-0 transition-opacity duration-300 collapse collapse-arrow w-full bg-base-100 rounded-xl shadow-lg my-4 p-1"
 		id={ fmt.Sprintf("log-container-%d", log.ID) }
 	>
 		<input type="radio" name="my-acordion-1"/>
